--- a/server/.env
+++ b/server/.env
@@ -10,7 +10,7 @@ DB_PASS=CZcmTsi04EdlJ7VeFmAVcm47rv4SuCQs
 DB_SSL=true
 
 #api
-REACT_APP_API_URL=https://pint-f1tf.onrender.com
+REACT_APP_API_URL=https://projetoai2.onrender.com
 REACT_APP_FRONTEND=https://pint-softinsa.vercel.app
 
 	
