--- a/server/.env
+++ b/server/.env
@@ -11,7 +11,7 @@ DB_SSL=true
 
 #api
 REACT_APP_API_URL=https://projetoai2.onrender.com
-REACT_APP_FRONTEND=https://taskpro-sc3z.onrender.com/
+REACT_APP_FRONTEND=https://taskpro-sc3z.onrender.com
 
 	
 #Auth
